src/styles/app.css
:root {
  --bold: 700;
  --canvasH: 500;
  --smallText: 10px;
  --colorMain: white;
  --colorSub: black;
  --colorSelectHover: #fffffd;
  --colorButtonHover: #ddd;
  --colorButtonActive: #aaa;
  --colorButtonDisabled: #999;
  --colorP1: red;
  --colorP2: blue;
  --radius: 4px;
  --zViewer: 1;
  --zCanvas: 10;
  --zCanvasForward: 20;
  --zTooltip: 20;
  --zComboboxSearch: 20;
  --zBoardScanlines: 50;
  --zBoardControls: 60;
  --zViewerControls: 60;
  --zComboboxList: 70;
  --zPortrait: 80;
  --ComboboxFullscreen: 99;
  --zModal: 99;
}

.dark-theme {
  --colorMain: black;
  --colorSub: #f3f3f3;
  --colorSelectHover: #000001;
  --colorButtonHover: #777;
  --colorButtonActive: #333;
  --colorButtonDisabled: #555;
  --colorP1: #5e2626;
  --colorP2: #2b2b55;
}

html,
body,
#root,
.App {
  min-height: 100vh;
}

* {
  padding: 0;
  margin: 0;
}

.App {
  background: linear-gradient(to right, var(--colorP1) 50%, var(--colorP2) 50%);
  color: var(--colorMain);
  font-family: "Roboto", "Helvetica Neue", sans-serif;
}

.App-warning,
.App-header,
.App-footer {
  display: block;
  max-width: 192px;
  margin: 16px auto 0;
  padding: 8px;
  background-color: black;
  color: white;
  text-align: center;
  font-size: var(--smallText);
  line-height: 14px;
  font-weight: var(--bold);
}

.App-footer {
  margin-top: 0;
  border-top: 1px dashed #777;
}

.App-settings {
  border-bottom: 1px dashed #777;
  padding-bottom: 8px;
  margin-bottom: 8px;
  text-align: left;
}

.App-settings button {
  display: block;
  width: 100%;
  padding-left: 24px;
  text-align: left;
  background-image: url("../assets/iconmonstr-gear-1.svg");
  background-repeat: no-repeat;
  background-position: 8px 50%;
  background-size: 12px 12px;
}

.dark-theme .App-settings button {
  background-image: url("../assets/iconmonstr-gear-1-white.svg");
}

.App-warning {
  display: none;
  background-color: var(--colorMain);
  color: var(--colorSub);
}

.App-main {
  min-width: 300px;
  margin: 0 auto;
  padding: 0 24px 48px;
}

h1 {
  font-size: 32px;
  line-height: 36px;
  text-transform: uppercase;
}

h1 span {
  display: block;
  text-transform: initial;
  font-size: var(--smallText);
  line-height: 14px;
}

a:not(.link-button) {
  color: white;
  text-decoration: underline;
}

img,
canvas {
  image-rendering: pixelated; /* webkit */
  image-rendering: crisp-edges; /* firefox */
}

select,
button,
.link-button {
  appearance: none;
  border: 0;
  padding: 4px;
  height: 32px;
  background: var(--colorMain);
  color: var(--colorSub);
  font-weight: var(--bold);
}

select:hover {
  cursor: pointer;
  background: var(--colorSelectHover);
}

button:hover,
.link-button:hover {
  cursor: pointer;
  background-color: var(--colorButtonHover);
}

button:active,
.link-button:active {
  background-color: var(--colorButtonActive);
}

button,
.link-button {
  display: inline-block;
  border: 2px solid black;
  min-width: 32px;
  font-size: var(--smallText);
  vertical-align: top;
}

button + button,
button + .link-button {
  border-left: 0;
}

.link-button {
  text-decoration: none;
  padding: 0 4px;
  font-size: 12px;
  line-height: 28px;
  box-sizing: border-box;
}

option {
  font-weight: 300;
  background: var(--colorMain);
}

optgroup {
  background: var(--colorButtonDisabled);
  color: var(--colorSub);
}

button:disabled {
  background: var(--colorButtonDisabled);
  color: var(--colorSub);
  cursor: default;
}

.mirror {
  transform: scaleX(-1);
}

/* reverse mirror effect on tooltips (sad) */
.mirror[aria-label]:hover::after {
  transform: scaleX(-1);
}

[aria-label] {
  position: relative;
}

[aria-label]:hover::after {
  content: attr(aria-label);
  z-index: var(----zTooltip);
  position: absolute;
  top: 90%;
  left: -33%;
  min-width: 80px;
  width: 150%;
  padding: 4px 8px;
  background: var(--colorMain);
  color: var(--colorSub);
  text-align: left;
  font-weight: 300;
  font-size: var(--smallText);
  line-height: 12px;
  border: 2px solid black;
  border-radius: var(--radius);
}

.disabled-tooltips [aria-label]:hover::after {
  content: none;
}

.title {
  margin: 16px 0;
  padding: 0 16px;
  line-height: 32px;
  background: var(--colorMain);
  color: var(--colorP1);
}

.title span {
  display: block;
  font-size: 28px;
  font-weight: var(--bold);
  text-transform: uppercase;
  transform: skew(25deg);
}

.title::before,
.title::after {
  content: "";
  position: absolute;
  top: 0;
  left: -16px;
  width: 16px;
  height: 100%;
  background: linear-gradient(64deg, transparent 50%, var(--colorMain) 50%);
}

.title::after {
  left: auto;
  right: -16px;
  background: linear-gradient(-64deg, transparent 50%, var(--colorMain) 50%);
}

h2.title {
  margin: 32px 0 48px;
}

.PlayerForm-p2 .title span,
.StepSelector-p2 .title span {
  transform: skew(-25deg);
}

.PlayerForm-p2 .title,
.StepSelector-p2 .title {
  text-align: right;
  color: var(--colorP2);
}

.App-playerForms {
  display: flex;
}

.PlayerForm,
.MoveSelector,
.Viewer,
.StepSelector,
.Viewer-controls,
.title,
.board {
  position: relative;
}

.App-playerForms,
.Viewer-controls {
  max-width: 1000px;
  margin: 0 auto;
}

.PlayerForm,
.StepSelector {
  width: 50%;
}

/**************************************/
@media (max-width: 800px) {
  .App-warning {
    display: block;
  }

  .App-main {
    padding: 0 0 48px;
  }

  .title span {
    font-size: 18px;
  }
}

@media (hover: hover) and (pointer: fine) {
  [aria-label]:not(.disable-tooltip):hover::after {
    display: block;
  }
}

